// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`import-defer.js [acorn] format 1`] = `
"Unexpected token (1:14)
> 1 | import defer * as ns from "x";
    |              ^
  2 |
Cause: Unexpected token (1:13)"
`;

exports[`import-defer.js [espree] format 1`] = `
"Unexpected token * (1:14)
> 1 | import defer * as ns from "x";
    |              ^
  2 |
Cause: Unexpected token *"
`;

exports[`import-defer.js [meriyah] format 1`] = `
"Import source must be string (1:14)
> 1 | import defer * as ns from "x";
    |              ^
  2 |
Cause: [1:14]: Import source must be string"
`;

exports[`import-defer.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
import defer * as ns from "x";

=====================================output=====================================
import defer * as ns from "x";

================================================================================
`;

exports[`import-defer-attributes-declaration.js [acorn] format 1`] = `
"Unexpected token (1:14)
> 1 | import defer * as ns from "x" with { attr: "val" };
    |              ^
  2 |
Cause: Unexpected token (1:13)"
`;

exports[`import-defer-attributes-declaration.js [espree] format 1`] = `
"Unexpected token * (1:14)
> 1 | import defer * as ns from "x" with { attr: "val" };
    |              ^
  2 |
Cause: Unexpected token *"
`;

exports[`import-defer-attributes-declaration.js [meriyah] format 1`] = `
"Import source must be string (1:14)
> 1 | import defer * as ns from "x" with { attr: "val" };
    |              ^
  2 |
Cause: [1:14]: Import source must be string"
`;

exports[`import-defer-attributes-declaration.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
import defer * as ns from "x" with { attr: "val" };

=====================================output=====================================
import defer * as ns from "x" with { attr: "val" };

================================================================================
`;

exports[`no-default.js [__babel_estree] format 1`] = `
"Only \`import defer * as x from "./module"\` is valid. (1:14)
> 1 | import defer x from "x";
    |              ^
  2 |
Cause: Only \`import defer * as x from "./module"\` is valid. (1:13)"
`;

exports[`no-default.js [acorn] format 1`] = `
"Unexpected token (1:14)
> 1 | import defer x from "x";
    |              ^
  2 |
Cause: Unexpected token (1:13)"
`;

exports[`no-default.js [babel] format 1`] = `
"Only \`import defer * as x from "./module"\` is valid. (1:14)
> 1 | import defer x from "x";
    |              ^
  2 |
Cause: Only \`import defer * as x from "./module"\` is valid. (1:13)"
`;

exports[`no-default.js [espree] format 1`] = `
"Unexpected token x (1:14)
> 1 | import defer x from "x";
    |              ^
  2 |
Cause: Unexpected token x"
`;

exports[`no-default.js [meriyah] format 1`] = `
"Import source must be string (1:14)
> 1 | import defer x from "x";
    |              ^
  2 |
Cause: [1:14]: Import source must be string"
`;

exports[`no-named.js [__babel_estree] format 1`] = `
"Only \`import defer * as x from "./module"\` is valid. (1:16)
> 1 | import defer { x } from "x";
    |                ^
  2 |
Cause: Only \`import defer * as x from "./module"\` is valid. (1:15)"
`;

exports[`no-named.js [acorn] format 1`] = `
"Unexpected token (1:14)
> 1 | import defer { x } from "x";
    |              ^
  2 |
Cause: Unexpected token (1:13)"
`;

exports[`no-named.js [babel] format 1`] = `
"Only \`import defer * as x from "./module"\` is valid. (1:16)
> 1 | import defer { x } from "x";
    |                ^
  2 |
Cause: Only \`import defer * as x from "./module"\` is valid. (1:15)"
`;

exports[`no-named.js [espree] format 1`] = `
"Unexpected token { (1:14)
> 1 | import defer { x } from "x";
    |              ^
  2 |
Cause: Unexpected token {"
`;

exports[`no-named.js [meriyah] format 1`] = `
"Import source must be string (1:14)
> 1 | import defer { x } from "x";
    |              ^
  2 |
Cause: [1:14]: Import source must be string"
`;
